[package]
name = "inner_unikernel_rt"
version = "0.1.0"
edition = "2021"
build = "build.rs"
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
test = false
doctest = false

[dependencies]
paste = "1.0.14"
rlibc = "1.0.0"
struct_filter = { path = "../struct_filter" }

[profile.dev]
debug = 0
panic = "abort"

[profile.release]
debug = 0
panic = "abort"

[inner_unikernel]
uheaders = [
  "linux/bpf.h",
  "linux/errno.h",
  "linux/perf_event.h",
  "linux/ptrace.h",
  "linux/seccomp.h",
  "linux/unistd.h",
  "linux/in.h",
  "linux/pkt_cls.h",
]

kheaders = [
  "linux/sched.h",
  "linux/gfp_types.h",
  "linux/timekeeper_internal.h",
  "linux/seqlock.h",
  "linux/prandom.h",
  "linux/kcsan.h",
  "linux/filter.h",
  "linux/if_ether.h",
  "linux/ip.h",
  "linux/tcp.h",
  "linux/udp.h",
  "linux/skbuff.h",
  "net/xdp.h",
]

kconfigs = [
  "CONFIG_BPF_KPROBE_OVERRIDE",
  "CONFIG_KALLSYMS_ALL",
]
